[gd_scene load_steps=19 format=2]

[ext_resource path="res://src/Card/Rock/CardRock.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Card/Scissors/CardScissors.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Card/Paper/CardPaper.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Button/Button.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/titlescreen/background_title.png" type="Texture" id=5]
[ext_resource path="res://src/Button/ButtonSound.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/Button/ButtonMusic.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/titlescreen/title_banner.png" type="Texture" id=8]
[ext_resource path="res://assets/fonts/CenturySchoolbook.TTF" type="DynamicFontData" id=9]
[ext_resource path="res://src/UI/TitleScreen.gd" type="Script" id=10]
[ext_resource path="res://assets/sound/cards/card_move.ogg" type="AudioStream" id=11]
[ext_resource path="res://assets/sound/chipsStack1.ogg" type="AudioStream" id=12]

[sub_resource type="Animation" id=1]
resource_name = "Intro"
length = 4.0
step = 0.025
tracks/0/type = "bezier"
tracks/0/path = NodePath("ButtonMain:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 800.807, -0.25, 0, 0.25, 0, 800.807, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 3.1, 3.7 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("ButtonMain:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1149.21, -0.25, 0, 0.338418, 3.12744, 664.013, -0.306865, -146.329, 0.25, 0 ),
"times": PoolRealArray( 3.1, 3.7 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Banner:rect_position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 607.036, -0.25, 0, 0.25, 0, 607.036, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.2, 0.9 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Banner:rect_position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( -220.01, -0.25, 0, 0.693926, 5.50922, 419.214, -0.276005, 138.726, 0.25, 0 ),
"times": PoolRealArray( 0.2, 0.9 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("Cards:rect_position:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 959.923, -0.25, 0, 0.25, 0, 959.923, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.9, 1.3 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("Cards:rect_position:y")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( -182.141, -0.25, 0, 0.25, 0, 321.319, -0.228528, 118.31, 0.25, 0 ),
"times": PoolRealArray( 0.9, 1.3 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("Cards/CardRock:position:x")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, -125.697, -0.399365, 0.78698, 0.25, 0 ),
"times": PoolRealArray( 1.8, 2.2 )
}
tracks/7/type = "bezier"
tracks/7/path = NodePath("Cards/CardRock:position:y")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 30, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 1.8, 2.2 )
}
tracks/8/type = "bezier"
tracks/8/path = NodePath("Cards/CardPaper:position:x")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 125.976, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 1.8, 2.2 )
}
tracks/9/type = "bezier"
tracks/9/path = NodePath("Cards/CardPaper:position:y")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 30, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 1.8, 2.2 )
}
tracks/10/type = "bezier"
tracks/10/path = NodePath("Cards/CardPaper:rotation_degrees")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 30, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 1.8, 2.2 )
}
tracks/11/type = "bezier"
tracks/11/path = NodePath("Cards/CardRock:rotation_degrees")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, -30, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 1.8, 2.2 )
}
tracks/12/type = "method"
tracks/12/path = NodePath(".")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 2.6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "flip_cards"
} ]
}
tracks/13/type = "audio"
tracks/13/path = NodePath("AudioStreamPlayer")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 12 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 11 )
}, {
"end_offset": 0.311265,
"start_offset": 0.0,
"stream": ExtResource( 11 )
}, {
"end_offset": 0.0812208,
"start_offset": 0.0,
"stream": ExtResource( 12 )
} ],
"times": PoolRealArray( 0.7, 1, 1.675, 3.6 )
}

[sub_resource type="DynamicFont" id=2]
size = 68
use_filter = true
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=3]
size = 40
use_filter = true
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=4]
size = 50
use_filter = true
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=5]
size = 50
use_filter = true
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=6]
size = 24
use_filter = true
font_data = ExtResource( 9 )

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Intro"
anims/Intro = SubResource( 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = -15.0
bus = "Sound"

[node name="Background" type="TextureRect" parent="."]
margin_left = -1.68176
margin_top = -1.68176
margin_right = 1922.32
margin_bottom = 1082.32
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cards" type="Control" parent="."]
margin_left = 959.923
margin_top = -182.141
margin_right = 999.923
margin_bottom = -142.141
rect_scale = Vector2( 1.2, 1.2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CardRock" parent="Cards" instance=ExtResource( 1 )]

[node name="CardPaper" parent="Cards" instance=ExtResource( 3 )]

[node name="CardScissors" parent="Cards" instance=ExtResource( 2 )]

[node name="Banner" type="Control" parent="."]
margin_left = 607.036
margin_top = -220.01
margin_right = 647.036
margin_bottom = -180.011
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BannerImage" type="TextureRect" parent="Banner"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 8 )

[node name="BannerTitle" type="Label" parent="Banner"]
margin_left = 41.3985
margin_top = 16.8055
margin_right = 669.398
margin_bottom = 99.8055
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.741176, 0.74902, 0.741176, 1 )
text = "Rock Paper Scissors"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BannerTitle2" type="Label" parent="Banner"]
margin_left = 205.198
margin_top = 100.776
margin_right = 499.198
margin_bottom = 149.776
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.568627, 0.572549, 0.568627, 1 )
text = "The Card Game"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonMain" type="Control" parent="."]
margin_left = 800.807
margin_top = 1149.21
margin_right = 840.807
margin_bottom = 1189.21
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundButton" type="ColorRect" parent="ButtonMain"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -29.0
margin_top = -30.0
margin_right = 309.0
margin_bottom = 236.0
color = Color( 0.160784, 0.164706, 0.152941, 0.686275 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonPlay" parent="ButtonMain" instance=ExtResource( 4 )]
margin_right = 319.0
margin_bottom = 102.0
custom_fonts/font = SubResource( 4 )
text = "Play"

[node name="ButtonQuit" parent="ButtonMain" instance=ExtResource( 4 )]
margin_top = 146.484
margin_right = 319.0
margin_bottom = 248.484
custom_fonts/font = SubResource( 5 )
text = "Quit"

[node name="ButtonSoundMusic" type="Control" parent="."]
margin_left = 1802.04
margin_top = 977.997
margin_right = 1842.04
margin_bottom = 1018.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonSound" parent="ButtonSoundMusic" instance=ExtResource( 6 )]
margin_left = -119.26
margin_right = -42.2599
margin_bottom = 77.0

[node name="ButtonMusic" parent="ButtonSoundMusic" instance=ExtResource( 7 )]
margin_top = 1.04788
margin_right = 77.0
margin_bottom = 78.0479

[node name="Credits" type="Label" parent="."]
margin_left = 19.836
margin_top = 966.387
margin_right = 647.836
margin_bottom = 1062.39
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.741176, 0.74902, 0.741176, 1 )
text = "Game created by Sean Lee (Xalph Five)
Sound: Kenny (Kenny.nl)
Music: omfgdude (OpenGameArt.org)"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="ButtonMain/ButtonPlay" to="." method="_on_ButtonPlay_pressed"]
[connection signal="pressed" from="ButtonMain/ButtonQuit" to="." method="_on_ButtonQuit_pressed"]
